@@ -61,6 +61,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     --fail-missing option is now the default in compat 13.
     Thanks to Hugh McMaster and Christoph Berg for the report.
     (Closes: #960107, #960697)
+  * dh: Filter out the root-sequence in "--list" output and reject
+    attempts to activate or deactivate the sequence as it is an
+    implementation detail.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
